# HeisProsjekt

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  Doxyfile  LICENSE  README.md  build.sh  build_test.sh  docker-compose.yml  install_dependecies.sh  install_dependencies.sh  projectfile.sublime-project
docker/: Dockerfile
docker/system/: Dockerfile
include/: door_driver.h  elevator_controller.h  elevator_driver.h  floor_driver.h  fsm.h  motor_defines.h  order_queue.h  state_at_floor.h  state_emergency.h  state_execute_queue.h  state_moving_down.h  state_moving_up.h  timer_driver.h
src/: door_driver.c  elevator_controller.c  elevator_driver.c  floor_driver.c  main.c  order_queue.c  state_at_floor.c  state_emergency.c  state_execute_queue.c  state_moving_down.c  state_moving_up.c  timer_driver.c
src/main/: main.c
test/: TestUnity.c  elevator_controller_test.h
uml/: Diagrams.mdj  Modules.mdj  SequenceDiagram.mdj
